--- a/airflow_settings.yaml
+++ b/airflow_settings.yaml
@@ -7,15 +7,15 @@
 
 airflow:
   connections:
-    - conn_id:
-      conn_type:
+    - conn_id: fs_default
+      conn_type: File (path) 
       conn_host:
       conn_schema:
       conn_login:
       conn_password:
       conn_port:
       conn_extra:
-        example_extra_field: example-value
+        path: /usr/local/airflow/include/
   pools:
     - pool_name:
       pool_slot:
